Position windows avoid complete overlapping when multiple windows open

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,13 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&display=swap');
 
-body {
-	max-width: 100vw;
-	min-height: 100vh;
-	background: url('../images/background2.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-color: rgb(237, 237, 237);
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&display=swap');
 
 * {
 	margin: 0;
